--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,11 @@ dependencies {
 //    testImplementation 'junit:junit:4.12'
 //    androidTestImplementation 'com.android.support.test:runner:1.0.2'
 //    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    //黄牛刀
+    implementation 'com.jakewharton:butterknife:8.4.0'
+    //黄牛刀的点击事件
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
+    implementation 'com.jakewharton:butterknife:8.4.0'
+
+    compile 'com.android.support:recyclerview-v7:26.1.0'
 }
