--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         </activity>
         <activity android:name=".Animation.FrameAnimation"/>
         <activity android:name=".Animation.TweenAnimation"/>
+        <activity android:name=".Animation.PropertAnimation"/>
     </application>
 
 </manifest>
