--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         <activity android:name=".Animation.MyTranstionAnimator"/>
         <activity android:name=".storage.StorageMain"/>
         <activity android:name=".storage.TextSave"/>
+        <activity android:name=".storage.SharedPreferencesSave"/>
     </application>
 
 </manifest>
