--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <application
         android:allowBackup="true"
+        android:name=".storage.sqllitepal.MyApplication"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -25,6 +26,7 @@
         <activity android:name=".storage.TextSave"/>
         <activity android:name=".storage.SharedPreferencesSave"/>
         <activity android:name=".storage.sql.SQLDataSave"/>
+        <activity android:name=".storage.sqllitepal.SQLLitePalSave"/>
     </application>
 
 </manifest>
