--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.study.hong.knowledgecommon">
-
+<uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
-        android:name=".storage.sqllitepal.MyApplication"
+        android:name=".MyApplication"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -27,6 +27,9 @@
         <activity android:name=".storage.SharedPreferencesSave"/>
         <activity android:name=".storage.sql.SQLDataSave"/>
         <activity android:name=".storage.sqllitepal.SQLLitePalSave"/>
+        <activity android:name=".thread.ThraedMain"/>
+        <activity android:name=".thread.MyBitmapUtils"/>
+        <activity android:name=".thread.MyThreadPool"/>
     </application>
 
 </manifest>
